--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+absl-py==0.9.0
 attrs==19.3.0
 audioread==2.1.8
 backcall==0.1.0
 bleach==3.1.4
+cachetools==4.1.0
+certifi==2020.4.5.1
 cffi==1.14.0
+chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+google-auth==1.13.1
+google-auth-oauthlib==0.4.1
+grpcio==1.28.1
+idna==2.9
 importlib-metadata==1.6.0
 ipykernel==5.2.0
 ipython==7.13.0
@@ -23,14 +31,17 @@ jupyter-core==4.6.3
 kiwisolver==1.2.0
 librosa==0.7.2
 llvmlite==0.31.0
+Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.5
+nnAudio==0.0.13
 notebook==6.0.3
 numba==0.48.0
 numpy==1.18.2
+oauthlib==3.1.0
 pandas==1.0.3
 pandocfilters==1.4.2
 parso==0.6.2
@@ -39,7 +50,10 @@ pickleshare==0.7.5
 Pillow==7.1.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
+protobuf==3.11.3
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.6.1
 pyparsing==2.4.7
@@ -49,20 +63,28 @@ pytz==2019.3
 pyzmq==19.0.0
 qtconsole==4.7.2
 QtPy==1.9.0
+requests==2.23.0
+requests-oauthlib==1.3.0
 resampy==0.2.2
+rsa==4.0
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.10.0
 Send2Trash==1.5.0
 six==1.14.0
 SoundFile==0.10.3.post1
+tensorboard==2.2.0
+tensorboard-plugin-wit==1.6.0.post3
 terminado==0.8.3
 testpath==0.4.4
 torch==1.4.0
+torchaudio==0.4.0
 torchvision==0.5.0
 tornado==6.0.4
 traitlets==4.3.3
+urllib3==1.25.8
 wcwidth==0.1.9
 webencodings==0.5.1
+Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 zipp==3.1.0
